# fmu-builder

./: .gitignore  CLAUDE.md  environment.yml  pyproject.toml
docs/: architecture.md
examples/simple_gain/: fmu_config.yaml  gain.c  gain.h
fmu_builder/: __init__.py  cli.py  codegen.py  compiler.py  config.py  packager.py  xmlgen.py
fmu_builder/static/: fmi2_adapter.h  fmi2_wrapper.c
fmu_builder/static/fmi2/: fmi2FunctionTypes.h  fmi2Functions.h  fmi2TypesPlatform.h
fmu_builder/templates/: adapter.c.j2  modelDescription.xml.j2
tests/: test_codegen.py  test_config.py  test_e2e.py  test_xmlgen.py
